[gd_scene load_steps=2 format=2]

[ext_resource path="res://ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node"]
script = ExtResource( 1 )

[node name="ScreenShake" type="Tween" parent="."]

[node name="ShakeTime" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShakeTime" to="." method="_on_ShakeTime_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
